; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/devices/extr_docg3.c_doc_readw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/devices/extr_docg3.c_doc_readw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.docg3 = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.docg3*, i64)* @doc_readw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @doc_readw(%struct.docg3* %0, i64 %1) #0 {
  %3 = alloca %struct.docg3*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.docg3* %0, %struct.docg3** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.docg3*, %struct.docg3** %3, align 8
  %7 = getelementptr inbounds %struct.docg3, %struct.docg3* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i64 @readw(i64 %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = trunc i64 %15 to i32
  %17 = call i32 @trace_docg3_io(i32 0, i32 16, i64 %14, i32 %16)
  %18 = load i64, i64* %5, align 8
  ret i64 %18
}

declare dso_local i64 @readw(i64) #1

declare dso_local i32 @trace_docg3_io(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
